Add styling to personal website

--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
-    <center>
     <head>
+        <link rel="stylesheet" href="styles.css" />
     </head>
-    <body> <img src= http://msjhs17.weebly.com/uploads/2/0/8/5/20850474/1379562507.jpg>
+    <body> <img src= http://cdn2-www.dogtime.com/assets/uploads/2016/08/corgi-puppy-6.jpg>
         <h1>Minnie Luu</h1>
-        <p>student at Mission San Jose HS</p>
-        <p>go Warriors!</p>
+        <p>corgifornia</p>
     </body>
-    </center>
 </html>
