--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
+    <center>
     <head>
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body> <img src= http://cdn2-www.dogtime.com/assets/uploads/2016/08/corgi-puppy-6.jpg>
-        <h1>Minnie Luu</h1>
-        <p>corgifornia</p>
+        <h1><fontpt=60> corgifornia </fontpt></h1>
+        <p>bork bork</p>
     </body>
+    </center>
 </html>
