--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body> <img src= http://cdn2-www.dogtime.com/assets/uploads/2016/08/corgi-puppy-6.jpg>
-        <h1><fontpt=60> corgifornia </fontpt></h1>
+        <h1>corgifornia</h1>
         <p>bork bork</p>
     </body>
     </center>
