--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <link rel="stylesheet" href="styles.css" />
     </head>
-    <body> <img src= http://cdn2-www.dogtime.com/assets/uploads/2016/08/corgi-puppy-6.jpg>
+    <body> <img src="http://i.imgur.com/lUTQ9S8.jpg">
         <h1>corgifornia</h1>
         <p>bork bork</p>
     </body>
